<resources>
    <string name="app_name">Ma\'Nshma</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="display_name">Display Name</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="register_btn">Register</string>
    <string name="login_prompt">Already registered?</string>
    <string name="login_link">Login here</string>
    <string name="register_prompt">Don\'t have an account?</string>
    <string name="register_link">Register here</string>
    <string name="login_btn">Login</string>
    <string name="settings">Settings</string>
    <string name="server_address">Server Address</string>
    <string name="dark_mode_switch">Dark Mode</string>
    <string name="save_settings">Save</string>
</resources>