<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bright_blue"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E8F1FF"
            android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <!-- Username EditText -->
            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLength="15"
                android:padding="8dp"
                tools:ignore="Autofill" />

            <!-- Password EditText -->
            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="25"
                android:padding="8dp"
                tools:ignore="Autofill" />

            <!-- Login Button -->
            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/bright_blue"
                android:text="@string/login_btn"
                android:textColor="@color/white" />

            <!-- Register Prompt -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:text="@string/register_prompt" />
            <!-- Register Prompt -->
            <TextView
                android:id="@+id/registerLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:text="@string/register_link"
                android:textColor="@color/bright_blue" />


        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
